Registration, Login, logout local working